--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,7 +8,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="header-image" routerLink='\'>
+      <a class="header-image" routerLink=''>
         <i class="fa fa-y-combinator" aria-hidden="true"></i> 
         <i class="fa fa-header" aria-hidden="true"></i><strong id="hacker-header">acker</strong>
       </a>    
