--- a/src/app/news/news.component.html
+++ b/src/app/news/news.component.html
@@ -107,11 +107,10 @@
 
 	<div class="col-md-4" id="userInfo">
 		<div id="details">
-			<h3>User Details:</h3>
+			<h3>User Details</h3>
 			<ul>
-				<li>User: {{ userData.about }}</li>
-				<li>Created: {{ userData.created }} </li>
-				<li>Karma: {{ userData.karma}}</li>
+				<li><strong>User: </strong> {{ userData.about }}</li>
+				<li><strong>Karma: </strong> {{ userData.karma}}</li>
 				<li>
 					<ul>
 						<li><a href="#"> Submission</a></li>
