--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,9 +1,10 @@
-<footer class="jumbotron">
+<hr />
+<footer class="container-fluid footer-bg-color">
 
   <div class="row">
 
     <div class="col-md-6">
-    	<h1><i class="fa fa-y-combinator" aria-hidden="true"></i> Hacker</h1>
+    	<h1 id="footer-name"><i class="fa fa-y-combinator" aria-hidden="true"></i> Hacker</h1>
       <ul class="social-elements">
       	<li><i class="fa fa-facebook" aria-hidden="true"></i></li>
       	<li><i class="fa fa-instagram" aria-hidden="true"></i></li>
